--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2021"
 
 [dependencies]
 yew = "*"
+gloo-utils = "*"
+
+
+[dependencies.web-sys]
+version = "0.3"
+features = ["console", "Document", "Element", "Node", "Window"]
