--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-yew = "*"
+yew = { version="0.20", features=["csr"] }
 gloo-utils = "*"
 gloo = "*"
 js-sys = "*"
